--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
 	background-color: lightblue;
 	padding: 3% 5% 3% 5%;
 }
+p {
+	font-size: 0.8em;
+}
 h1 {
 	margin: 0;
 	padding: 5%;
@@ -34,21 +37,24 @@ img {
 	flex: 0 1 auto;
 	background-color: lightblue;
 	width: 15%;
-	justify-content: center;
 	text-align: center;
 }
-.ItemOriginal {
+.itemOriginal {
 	flex: 0 1 auto;
 	display: flex;
 	justify-content: center;
 }
-.ItemModified {
+.itemModified {
 	flex: 0 1 auto;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 }
 .sidebarImage {
-	max-width: 100px; 
+	width: 30%;
+	flex: 0 1 auto;
+	max-width: 100px;
+	margin: 0 auto;
 }
 .footer {
 	background-color: black;
