--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,6 @@ body {
 	height: 15vh;
 }
 .logo {
-	//height: 15vh;
 	max-height: 100%;
 }
 .logo img {
@@ -48,6 +47,9 @@ h1 {
 	margin: 0 auto;
 	padding: 2% 0 5% 0;
 }
+.image:hover {
+	cursor: pointer;
+}
 img {
 	max-height: 100%;
 	max-width: 100%;
@@ -60,8 +62,8 @@ img {
 	width: 17%;
 	text-align: center;
 	justify-content: space-between;
-	border: 3px solid #ff9fd6;
-	padding-top: 2%;
+	border: 4px solid #ff9fd6;
+	padding: 2% 0 2% 0;
 	border-radius: 15px;
 	box-sizing: border-box;
 	margin: 2% 2% 2% 0%;
@@ -73,6 +75,9 @@ img {
 	justify-content: center;
 	color: saddlebrown;
 }
+.item:hover {
+	cursor: pointer;
+}
 .sidebarImage {
 	width: 40%;
 	flex: 0 1 auto;
@@ -80,7 +85,7 @@ img {
 	margin: 0 auto;
 }
 .footer {
-	background-color: #5d2e16;
+	background-color: #5c3927;
 	margin: 0;
 	padding: 2%;
 }
