working on bone function

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
 	display: flex;
 	justify-content: space-between;
 	background-color: #fffaf4;
-	padding: 2% 5% 2% 5%;
+	padding: 2% 5% 0 5%;
 	color: saddlebrown;
 }
 .logoDiv {
@@ -43,7 +43,7 @@ h1 {
 	box-sizing: border-box;
 }
 .image {
-	height: 420px;
+	height: 450px;
 	margin: 0 auto;
 	padding: 2% 0 5% 0;
 }
