--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,72 @@
 body {
 	background-color: #fffaf4;
 } 
-
-.form{
+.formWrapper {
+	width: 35%;
+	margin: 0 auto;
+}
+.logoLogin {
+	width: 55%;
+	margin: 15% 0 0 3%;
+}
+.logoImgLogin {
+	text-align: center;
+}
+.form {
 	margin: 0px auto;
-    width: 55%;
 	text-align: center;
 	line-height: 330%;
+	margin-top: 5vh;
+	color: #5c3927;
+	font-size: 1.2em;
+	font-weight: 700;
 } 
-.inputField{
-	width: 50%;
+.inputField {
+	width: 95%;
 	border-radius: 7px;
-	padding: 2%;
+	padding: 3%;
 	font-size: 1em;
 	box-shadow: none;
-	border: 1px solid gray;
+	border: 3px solid #5c3927;
+}
+.submitButton{
+    width: 45%;
+    background: #5c3927;
+    height: 45px;
+    border: none;
+	color: white;
+	font-size: 1em;
+    border-radius: 5px;
+	margin: 3% 0 10% 0;
+}
+.submitButton:hover {
+	cursor: pointer; 
 }
 .header {
 	display: flex;
 	justify-content: space-between;
 	background-color: #fffaf4;
 	padding: 2% 5% 0 5%;
-	color: saddlebrown;
+	color: #5c3927;
 }
 .logoDiv {
 	display: flex;
-	height: 15vh;
+	flex: 0 1 auto;
+	width: 40%;
 }
 .logo {
-	max-height: 100%;
-}
-.logo img {
-	min-height: 100%;
+	flex: 0 1 auto;
+	max-width: 57%;
 }
 .logoImg {
 	padding: 5% 0 7% 4%;
 }
+.welcomeMessage {
+	line-height: 165%;
+	text-align: right;
+}
 p {
-	font-size: 0.8em;
+	font-size: 1em;
 }
 h1 {
 	margin: 0;
@@ -58,7 +87,7 @@ h1 {
 	box-sizing: border-box;
 }
 .image {
-	height: 450px;
+	height: 600px;
 	margin: 0 auto;
 	padding: 7% 0 7% 0;
 }
@@ -67,7 +96,7 @@ h1 {
 }
 img {
 	max-height: 100%;
-	max-width: 100%;
+	max-width: 100%;	
 }
 .sidebar {
 	display: flex;
