--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,16 @@ body {
 .logoImgLogin {
 	text-align: center;
 }
+.startMessage {
+	text-align: center;
+	margin-top: 5vh;
+	color: #5c3927;
+	line-height: 160%;
+}
 .form {
 	margin: 0px auto;
 	text-align: center;
 	line-height: 330%;
-	margin-top: 5vh;
 	color: #5c3927;
 	font-size: 1.2em;
 	font-weight: 700;
