--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,7 @@ h1 {
 	padding: 2% 0 7% 0;
 }
 .image:hover {
-	cursor: pointer;
+	cursor: grab;
 }
 img {
 	max-height: 100%;
@@ -160,7 +160,7 @@ img {
 	max-width: 100px;
 	margin: 0 auto;
 }
-.savedDogs{
+.savedDogs {
     background-color: white;
 	color: saddlebrown;
 	border: 4px solid #ff9fd6;
@@ -173,6 +173,16 @@ img {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 40%;
+}
+.deleteButton {
+	width: 50px;
+    background: #ff9fd6;
+    border: none;
+	color: saddlebrown;
+	font-size: 0.8em;
+    border-radius: 5px;
+	margin-left: 3%;
+	padding: 4px 0 4px 0;
 }
 .footer {
 	background-color: #5c3927;
