--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,9 @@ img {
 	max-height: 100%;
 	max-width: 100%;	
 }
+li {
+	font-size: 0.75em;
+}
 .formWrapper {
 	width: 35%;
 	margin: 0 auto;
@@ -43,14 +46,14 @@ img {
 	text-align: center;
 	margin-top: 5vh;
 	color: #5c3927;
-	line-height: 160%;
+	line-height: 140%;
 }
 .form {
 	margin: 0px auto;
 	text-align: center;
-	line-height: 250%;
+	line-height: 230%;
 	color: #5c3927;
-	font-size: 1em;
+	font-size: 0.8em;
 	font-weight: 700;
 } 
 .inputField {
@@ -67,7 +70,7 @@ img {
     height: 45px;
     border: none;
 	color: white;
-	font-size: 0.8em;
+	font-size: 1em;
     border-radius: 5px;
 	margin: 3% 0 10% 0;
 }
@@ -113,10 +116,10 @@ img {
 .profileButton {
 	width: 50%;
     background: #5c3927;
-    height: 45px;
+    height: 40px;
     border: none;
 	color: white;
-	font-size: 0.65em;
+	font-size: 0.7em;
     border-radius: 5px;
 	margin: 3% 0 1.5% 0;
 }
@@ -208,10 +211,9 @@ img {
     background: #ff9fd6;
     border: none;
 	color: saddlebrown;
-	font-size: 0.8em;
+	font-size: 0.7em;
     border-radius: 5px;
 	margin-left: 3%;
-	padding: 4px 0 4px 0;
 }
 .footer {
 	background-color: #5c3927;
